app/src/main/kotlin/org/example/error/MissingParameterException.kt
package org.example.error

class MissingParameterException(parameterName: String) :
    RuntimeException("Required parameter '$parameterName' is missing")
